[package]
name = "attpc_envoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.0"
egui_extras = "0.24.0"
egui_plot = "0.24.0"
human_bytes = "0.4.3"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness"] }
quick-xml = { version = "0.30.0", features = ["serialize"] }
reqwest = "0.11.22"
serde = "1.0.193"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
